# save-payload-json

./: .dockerignore  .env  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.old  G:\Meu Drive\Atualização informe 2\AC\Gr11Uo2\2025-10-23.json  G:\Meu Drive\Atualização informe 2\Acre\GR011 UO011.2\2025-10-23.json  HEALTH_CHECK_FIX.md  Procfile  RAILWAY_DEPLOY.md  README.md  nixpacks.toml  railway.toml
.cargo/: config.toml
src/: error.rs  main.rs  main_test.rs  models.rs  storage.rs  task_manager.rs
static/: index.html  script.js  style.css
