[package]
name = "registros-json"
version = "0.1.0"
edition = "2024"

[dependencies]
# Servidor web
axum = { version = "0.7.3", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower = "0.4.13"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data
chrono = { version = "0.4", features = ["serde"] }

# Utilitários
webbrowser = "0.8.12"
thiserror = "1.0.50"