[package]
name = "registros-json"
version = "0.1.0"
edition = "2021"

[dependencies]
# Servidor web
axum = "0.8.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

# MongoDB
mongodb = "3.3.0"
bson = { version = "3.0.0", features = ["chrono-0_4"] }
futures = "0.3"

# Async trait
async-trait = "0.1"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Data
chrono = { version = "0.4", features = ["serde"] }

# Env vars
dotenv = "0.15"

# Navegador
webbrowser = "1.0"